Cleaned Up Code

--- a/voyager/templates/add_boat.html
+++ b/voyager/templates/add_boat.html
@@ -3,8 +3,9 @@
     <title>Add Boats</title>
   </head>
   <body>
+      <li><a href="/">Homepage</a></li>
   	 <h1>Add a Boat</h1>
-  	 	<li>
+  	 	
         <form action="/boats/add" method=GET>
           <label>Boat name</label>
           <input name="boat-name"/>
@@ -12,7 +13,7 @@
           <input name="boat-color"/>
           <input type=submit value="Submit"/>
         </form>
-      </li>
+     
 
   </body>
 </html>
