--- a/voyager/templates/add_sailor.html
+++ b/voyager/templates/add_sailor.html
@@ -3,8 +3,9 @@
     <title>Add Sailor</title>
   </head>
   <body>
+    <li><a href="/">Homepage</a></li>
   	 <h1>Add a Sailor</h1>
-  	 	<li>
+  	 
         <form action="/sailors/add" method=GET>
           <label>Sailor name</label>
           <input name="sailor-name"/>
@@ -14,7 +15,7 @@
           <input name="sailor-experience"/>
           <input type=submit value="Submit"/>
         </form>
-      </li>
+    
 
   </body>
 </html>
