--- a/voyager/templates/add_voyage.html
+++ b/voyager/templates/add_voyage.html
@@ -3,8 +3,9 @@
     <title>Add Voyage</title>
   </head>
   <body>
+    <li><a href="/">Homepage</a></li>
   	 <h1>Add a Voyage</h1>
-  	 	<li>
+  	 	
         <form action="/voyages/add" method=GET>
           <label>Sailor ID</label>
           <input name="sailor-id"/>
@@ -13,8 +14,7 @@
           <label>Date of Voyage</label>
           <input name="date-of-voyage"/>
           <input type=submit value="Submit"/>
-        </form>
-      </li>
+
 
   </body>
 </html>
